# authflowx

./: .env  .gitlab-ci.yml  README.md  cookiecutter-config-file.yml  docker-compose.override.yml  render.yaml
backend/: celeryworker.dockerfile
backend/app/: alembic.ini  pyproject.toml  worker-start.sh
backend/app/alembic/: env.py
backend/app/alembic/versions/: 2b1391bc4258_changed_uuid_to_nullable.py  3294065330a9_second_revision.py  3e0c73bd781a_first_revision.py
backend/app/app/: backend_pre_start.py  celeryworker_pre_start.py  main.py  utils.py
backend/app/app/api/: deps.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: users.py
backend/app/app/core/: config.py
backend/app/app/crud/: base.py  crud_user.py
backend/app/app/db/: base_class.py  init_db.py
backend/app/app/models/: item.py  user.py
backend/app/app/schemas/: __init__.py  item.py  user.py
frontend/: .env  Dockerfile  package-lock.json  package.json  tsconfig.json  vue.config.js
frontend/src/: App.vue  api.ts  env.ts  router.ts  utils.ts
frontend/src/interfaces/: index.ts
frontend/src/store/admin/: actions.ts
frontend/src/store/main/: actions.ts  index.ts  mutations.ts  state.ts
frontend/src/views/: HankoLogin.vue
frontend/src/views/main/: Dashboard.vue  Main.vue  Start.vue
frontend/src/views/main/admin/: AdminUsers.vue  EditUser.vue
frontend/src/views/main/profile/: UserProfile.vue
